basic layout with tags.

--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -6,10 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-sm-2 ads"> "ads </div>
+          <div class="col-12 col-sm-6 content">
+            <div class="container-fluid tic-container">
+              <div class="row tic-row">
+                <div class="col-4 tic-box"> XO </div>
+                <div class="col-4 tic-box"> X Turn </div>
+                <div class="col-4 tic-box"> reload </div>
+              </div>
+              <div class="row tic-row">
+                <div class="col-4 tic-box"> 1 </div>
+                <div class="col-4 tic-box"> 2 </div>
+                <div class="col-4 tic-box"> 3 </div>
+              </div>
+              <div class="row tic-row">
+                <div class="col-4 tic-box"> 4 </div>
+                <div class="col-4 tic-box"> 5 </div>
+                <div class="col-4 tic-box"> 6 </div>
+              </div>
+              <div class="row tic-row">
+                <div class="col-4 tic-box"> 7 </div>
+                <div class="col-4 tic-box"> 8 </div>
+                <div class="col-4 tic-box"> 9 </div>
+              </div>
+              <div class="row tic-row">
+                <div class="col-4 tic-box"> X (you) </div>
+                <div class="col-4 tic-box"> ties  32 </div>
+                <div class="col-4 tic-box"> O (other player) </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     
 
 
