--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -10,40 +10,49 @@
 </head>
 <body>
 
-    <div class="container-fluid">
+  <div class="container">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 
 
-          <div class="col-12 col-sm-6 content justify-content-center">
+    <!-- <div class="container-fluid d-flex text-center justify-content-center " >
+          <div class="col-12 col-sm-8 col-lg-6 board-container align-self-center">
             <div class="container-fluid tic-container">
-              <div class="row tic-row">
-                <div class="col-4 tic-box"> <svg width="72" height="32" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M8.562 1.634 16 9.073l7.438-7.439a3 3 0 0 1 4.243 0l2.685 2.685a3 3 0 0 1 0 4.243L22.927 16l7.439 7.438a3 3 0 0 1 0 4.243l-2.685 2.685a3 3 0 0 1-4.243 0L16 22.927l-7.438 7.439a3 3 0 0 1-4.243 0L1.634 27.68a3 3 0 0 1 0-4.243L9.073 16 1.634 8.562a3 3 0 0 1 0-4.243L4.32 1.634a3 3 0 0 1 4.243 0Z" fill="#31C3BD"/><path d="M56.1 0c8.765 0 15.87 7.106 15.87 15.87 0 8.766-7.105 15.871-15.87 15.871-8.765 0-15.87-7.105-15.87-15.87C40.23 7.106 47.334 0 56.1 0Zm0 9.405a6.466 6.466 0 1 0 0 12.931 6.466 6.466 0 0 0 0-12.931Z" fill="#F2B137" fill-rule="nonzero"/></g></svg> </div>
-                <div class="col-4 tic-box"> <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg"><path d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#31C3BD" fill-rule="evenodd"/></svg> Turn </div>
-                <div class="col-4 tic-box"> <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M19.524 0h-1.88a.476.476 0 0 0-.476.499l.159 3.284A9.81 9.81 0 0 0 9.835.317C4.415.317-.004 4.743 0 10.167.004 15.597 4.406 20 9.835 20a9.796 9.796 0 0 0 6.59-2.536.476.476 0 0 0 .019-.692l-1.348-1.349a.476.476 0 0 0-.65-.022 6.976 6.976 0 0 1-9.85-.63 6.987 6.987 0 0 1 .63-9.857 6.976 6.976 0 0 1 10.403 1.348l-4.027-.193a.476.476 0 0 0-.498.476v1.881c0 .263.213.476.476.476h7.944A.476.476 0 0 0 20 8.426V.476A.476.476 0 0 0 19.524 0Z" fill="#1F3641"/></svg> </div>
+              <div class="row tic-row ">
+                <div class="col-4 tic-box players-icons" > <svg width="72" height="32" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M8.562 1.634 16 9.073l7.438-7.439a3 3 0 0 1 4.243 0l2.685 2.685a3 3 0 0 1 0 4.243L22.927 16l7.439 7.438a3 3 0 0 1 0 4.243l-2.685 2.685a3 3 0 0 1-4.243 0L16 22.927l-7.438 7.439a3 3 0 0 1-4.243 0L1.634 27.68a3 3 0 0 1 0-4.243L9.073 16 1.634 8.562a3 3 0 0 1 0-4.243L4.32 1.634a3 3 0 0 1 4.243 0Z" fill="#31C3BD"/><path d="M56.1 0c8.765 0 15.87 7.106 15.87 15.87 0 8.766-7.105 15.871-15.87 15.871-8.765 0-15.87-7.105-15.87-15.87C40.23 7.106 47.334 0 56.1 0Zm0 9.405a6.466 6.466 0 1 0 0 12.931 6.466 6.466 0 0 0 0-12.931Z" fill="#F2B137" fill-rule="nonzero"/></g></svg> </div>
+                <div class="col-4 tic-box"> <svg width="20" height="20" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><path id="current_turn" d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#979797" fill-rule="evenodd"/></svg> Turn </div>
+                <div class="col-4 tic-box "> <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M19.524 0h-1.88a.476.476 0 0 0-.476.499l.159 3.284A9.81 9.81 0 0 0 9.835.317C4.415.317-.004 4.743 0 10.167.004 15.597 4.406 20 9.835 20a9.796 9.796 0 0 0 6.59-2.536.476.476 0 0 0 .019-.692l-1.348-1.349a.476.476 0 0 0-.65-.022 6.976 6.976 0 0 1-9.85-.63 6.987 6.987 0 0 1 .63-9.857 6.976 6.976 0 0 1 10.403 1.348l-4.027-.193a.476.476 0 0 0-.498.476v1.881c0 .263.213.476.476.476h7.944A.476.476 0 0 0 20 8.426V.476A.476.476 0 0 0 19.524 0Z" fill="#1F3641"/></svg> </div>
               </div>
               <div class="row tic-row">
-                <div class="col-4 tic-box"> 1 </div>
-                <div class="col-4 tic-box"> 2 </div>
-                <div class="col-4 tic-box"> 3 </div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="1"></svg></div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="2"></svg></div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="3"></svg></div>
               </div>
               <div class="row tic-row">
-                <div class="col-4 tic-box"> 4 </div>
-                <div class="col-4 tic-box"> 5 </div>
-                <div class="col-4 tic-box"> 6 </div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="4"></svg></div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="5"></svg></div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="6"></svg></div>
               </div>
               <div class="row tic-row">
-                <div class="col-4 tic-box"> 7 </div>
-                <div class="col-4 tic-box"> 8 </div>
-                <div class="col-4 tic-box"> 9 </div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="7"></svg></div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="8"></svg></div>
+                <div class="col-4 tic-box"><svg class="moves-icons" id="9"></svg></div>
               </div>
               <div class="row tic-row">
-                <div class="col-4 tic-box"> X (you) </div>
-                <div class="col-4 tic-box"> ties  32 </div>
-                <div class="col-4 tic-box"> O (other player) </div>
+                <div class="col-4 tic-box" id="player1wins"> X (you) </div>
+                <div class="col-4 tic-box" id="ties"> ties  32 </div>
+                <div class="col-4 tic-box" id="player2wins"> O (other player) </div>
               </div>
             </div>
-
-
-      </div>
+      </div> -->
     
 
 
