--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+
+  <section class="game-board">
   <div class="container">
     <div></div>
     <div></div>
@@ -21,7 +23,7 @@
     <div></div>
     <div></div>
   </div>
-
+</section>
 
     <!-- <div class="container-fluid d-flex text-center justify-content-center " >
           <div class="col-12 col-sm-8 col-lg-6 board-container align-self-center">
