added additional classes and IDs to main gameplayboard grid.

--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -12,16 +12,16 @@
 
   <section class="main-content main-grid">
 
-  <div class="container " id="game-board">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div class="container game-board" id="game-board">
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
+    <div class="game-board-grid-item"></div>
   </div>
 </section>
 
