added polaceholders for items above and bloew gameboard.

--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -13,6 +13,9 @@
   <section class="main-content main-grid">
 
   <div class="container game-board" id="game-board">
+    <div class="placeholder"></div>
+    <div class="placeholder"></div>
+    <div class="placeholder"></div>
     <div class="game-board-grid-item"></div>
     <div class="game-board-grid-item"></div>
     <div class="game-board-grid-item"></div>
@@ -22,6 +25,9 @@
     <div class="game-board-grid-item"></div>
     <div class="game-board-grid-item"></div>
     <div class="game-board-grid-item"></div>
+    <div class="placeholder"></div>
+    <div class="placeholder"></div>
+    <div class="placeholder"></div>
   </div>
 </section>
 
