--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+
     <section id="landing-page" class="landing-page container">
       <div class="logo">
         <svg
@@ -38,17 +39,24 @@
   
       <div class="pick-symbol">
         <header class="landing-page_header pick-heading">PICK PLAYER 1'S MARK</header>
+        <div class="landing-page-mark-selections">
+          <div id="select-x" class="landing-page-mark-x selected">
+            <svg clas="landing-page__x-icon" width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#A8BFC9" fill-rule="evenodd"/></svg>
+          <div id="select-o" class="landing-page-mark-o">
+            <svg class="landing-page__o-icon" width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z" fill="#A8BFC9"/></svg>
+        </div>
+        <footer class="landing-page-footer pick-footer">
+          REMEMBER : X GOES FIRST
+        </footer>
       </div>
-      
-      <div id="select-x" class="landing-page-mark-selection selected">
 
-      </div>
-      <div id="select-o" class="landing-page-mark-selection">
 
-      </div>
-      
     </section>
 
+    <section class="vs-selection">
+      <button id="vs-cpu" class="button vs-cpu">NEW GAME (VS CPU)</button>
+      <button id="vs-player" class="button vs-player">NEW GAME (VS PLAYER)</button>
+    </section>
 
 
 
