--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <section id="landing-page" class="landing-page container displayBlock">
+    <section id="landing-page" class="landing-page container">
       <div class="logo">
         <svg
           class="logo-icon"
@@ -40,7 +40,7 @@
         <header class="landing-page_header pick-heading">PICK PLAYER 1'S MARK
         </header>
         <div class="landing-page-mark-selections">
-          <div id="x" class="landing-page-mark-x ">
+          <div id="x" class="landing-page-mark-x selected">
             <svg viewBox="0 0 80 50" class="landing-page__x-icon" width="30" height="30" xmlns="http://www.w3.org/2000/svg"><path d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#A8BFC9" fill-rule="evenodd"/></svg>
           </div>
           <div id="o" class="landing-page-mark-o ">
@@ -64,7 +64,7 @@
 
 
     <!-- second pageee the GAME woOoOo -->
-    <main class="container game-board" id="game-board" style="display: none">
+    <main class="container game-board displayNone" id="game-board" >
       <div class="XO-icon">
         <div class="logo">
           <svg
@@ -116,15 +116,15 @@
       </div>
       <!-- tic-tac-toe board -->
       <div class="playArea" id="playArea">
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
-        <div class="game-board-grid-item"></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
       </div>
 
       <div id="xWin">
