--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -85,14 +85,14 @@
           </svg>
         </div>
       </div>
-      <div id="game-board__turn" class="game-board__turn heading-xs">
+      <div id="game-board__turn" class="game-board__turn heading-xs selectX">
         <svg
           viewBox="0 20 60 10"
           class="game-board__turn-icon"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z"
+            d=""
             fill="#969696"
             fill-rule="evenodd"
           />
