--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -40,10 +40,10 @@
         <header class="landing-page_header pick-heading">PICK PLAYER 1'S MARK
         </header>
         <div class="landing-page-mark-selections">
-          <div id="x" class="landing-page-mark-x selected">
+          <div id="X" class="landing-page-mark-x selected">
             <svg viewBox="0 0 80 50" class="landing-page__x-icon" width="30" height="30" xmlns="http://www.w3.org/2000/svg"><path d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#A8BFC9" fill-rule="evenodd"/></svg>
           </div>
-          <div id="o" class="landing-page-mark-o ">
+          <div id="O" class="landing-page-mark-o ">
             <svg viewBox="0 0 80 50" class="landing-page__o-icon" width="30" height="30" xmlns="http://www.w3.org/2000/svg"><path d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z" fill="#A8BFC9"/></svg>
           </div>
     
@@ -85,7 +85,7 @@
           </svg>
         </div>
       </div>
-      <div id="game-board__turn" class="game-board__turn heading-xs selectX">
+      <div id="game-board__turn" class="game-board__turn heading-xs">
         <svg
           viewBox="0 20 60 10"
           class="game-board__turn-icon"
@@ -116,67 +116,37 @@
       </div>
       <!-- tic-tac-toe board -->
       <div class="playArea" id="playArea">
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
-        <div class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="1" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="2" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="3" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="4" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="5" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="6" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="7" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="8" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
+        <div id="9" class="game-board-grid-item"><svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><path d="" fill="#31C3BD" fill-rule="evenodd"/></svg></div>
       </div>
 
       <div id="xWin">
         <div id="xWinText" class="game-board__xWin">
-          "X (YOU)"
-          <div class="game-board__score-bold">0</div>
+          X (YOU)
+          <div class="game-board__score-bold"></div>
         </div>
       </div>
       <div id="tie">
         <div id="tieText" class="game-board__tie">
           "TIES"
-          <div class="game-board__score-bold">0</div>
+          <div class="game-board__score-bold">
+          </div>
         </div>
       </div>
       <div id="oWin">
         <div id="oWinText" class="game-board__xWin">
           "O (CPU)"
-          <div class="game-board__score-bold">0</div>
+          <div class="game-board__score-bold"></div>
         </div>
       </div>
     </main>
-
-    <!-- <div class="container-fluid d-flex text-center justify-content-center " >
-          <div class="col-12 col-sm-8 col-lg-6 board-container align-self-center">
-            <div class="container-fluid tic-container">
-              <div class="row tic-row ">
-                <div class="col-4 tic-box players-icons" > <svg width="72" height="32" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M8.562 1.634 16 9.073l7.438-7.439a3 3 0 0 1 4.243 0l2.685 2.685a3 3 0 0 1 0 4.243L22.927 16l7.439 7.438a3 3 0 0 1 0 4.243l-2.685 2.685a3 3 0 0 1-4.243 0L16 22.927l-7.438 7.439a3 3 0 0 1-4.243 0L1.634 27.68a3 3 0 0 1 0-4.243L9.073 16 1.634 8.562a3 3 0 0 1 0-4.243L4.32 1.634a3 3 0 0 1 4.243 0Z" fill="#31C3BD"/><path d="M56.1 0c8.765 0 15.87 7.106 15.87 15.87 0 8.766-7.105 15.871-15.87 15.871-8.765 0-15.87-7.105-15.87-15.87C40.23 7.106 47.334 0 56.1 0Zm0 9.405a6.466 6.466 0 1 0 0 12.931 6.466 6.466 0 0 0 0-12.931Z" fill="#F2B137" fill-rule="nonzero"/></g></svg> </div>
-                <div class="col-4 tic-box"> <svg width="20" height="20" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg"><path id="current_turn" d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#979797" fill-rule="evenodd"/></svg> Turn </div>
-                <div class="col-4 tic-box "> <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M19.524 0h-1.88a.476.476 0 0 0-.476.499l.159 3.284A9.81 9.81 0 0 0 9.835.317C4.415.317-.004 4.743 0 10.167.004 15.597 4.406 20 9.835 20a9.796 9.796 0 0 0 6.59-2.536.476.476 0 0 0 .019-.692l-1.348-1.349a.476.476 0 0 0-.65-.022 6.976 6.976 0 0 1-9.85-.63 6.987 6.987 0 0 1 .63-9.857 6.976 6.976 0 0 1 10.403 1.348l-4.027-.193a.476.476 0 0 0-.498.476v1.881c0 .263.213.476.476.476h7.944A.476.476 0 0 0 20 8.426V.476A.476.476 0 0 0 19.524 0Z" fill="#1F3641"/></svg> </div>
-              </div>
-              <div class="row tic-row">
-                <div class="col-4 tic-box"><svg class="moves-icons" id="1"></svg></div>
-                <div class="col-4 tic-box"><svg class="moves-icons" id="2"></svg></div>
-                <div class="col-4 tic-box"><svg class="moves-icons" id="3"></svg></div>
-              </div>
-              <div class="row tic-row">
-                <div class="col-4 tic-box"><svg class="moves-icons" id="4"></svg></div>
-                <div class="col-4 tic-box"><svg class="moves-icons" id="5"></svg></div>
-                <div class="col-4 tic-box"><svg class="moves-icons" id="6"></svg></div>
-              </div>
-              <div class="row tic-row">
-                <div class="col-4 tic-box"><svg class="moves-icons" id="7"></svg></div>
-                <div class="col-4 tic-box"><svg class="moves-icons" id="8"></svg></div>
-                <div class="col-4 tic-box"><svg class="moves-icons" id="9"></svg></div>
-              </div>
-              <div class="row tic-row">
-                <div class="col-4 tic-box" id="player1wins"> X (you) </div>
-                <div class="col-4 tic-box" id="ties"> ties  32 </div>
-                <div class="col-4 tic-box" id="player2wins"> O (other player) </div>
-              </div>
-            </div>
-      </div> -->
 
     <script src="app.js"></script>
   </body>
