vs CPU initialze working, dont ask questions.

--- a/starter-code/myTicTacToe/index.html
+++ b/starter-code/myTicTacToe/index.html
@@ -26,7 +26,7 @@
       </div>
     
       <div class="modal__buttons">
-        <button id="quit" class="button button--silver-small button--small" onclick="location.href='../myTicTacToe/index.html' ">Quit</button>
+        <button id="quit" class="button button--silver-small button--small" onclick="location.href='../myTicTacToe/index.html'">Quit</button>
         <button id="next-round" class="button button--yellow-small button--small">Next Round</button>
       </div>
 
@@ -34,7 +34,12 @@
 
     <!-- tie Modal -->
     <section id="tieModal" class="tieModal displayNone" index="2">
+      <h3 class="heading-lg">Round Tied</h3>
 
+      <div class="modal__buttons">
+        <button id="quit-tie" class="button button--silver-small button--small" onclick="location.href='../myTicTacToe/index.html'">Quit</button>
+        <button id="next-round-tie" class="button button--yellow-small button--small">Next Round</button>
+      </div>
     </section>
 
     <!-- Restart Modal-->
